--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,8 +5,6 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
-  release:
-    types: [published]
 
 jobs:
   # Job 1: Run Tests
@@ -165,46 +163,6 @@ jobs:
         name: python-package
         path: sdk/dist/
   
-  # Job 5: Publish to PyPI (only on release)
-  publish:
-    name: Publish to PyPI
-    runs-on: ubuntu-latest
-    needs: [test, lint, docker, build]
-    if: github.event_name == 'release' && github.event.action == 'published'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-    
-    - name: Install build tools
-      run: |
-        pip install build twine
-    
-    - name: Build package
-      run: |
-        cd sdk
-        python -m build
-    
-    - name: Publish to PyPI
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-      run: |
-        cd sdk
-        twine upload dist/*
-    
-    - name: Create deployment comment
-      uses: actions/github-script@v7
-      with:
-        script: |
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: '🎉 Package published to PyPI! Install with: `pip install ai-cost-observatory`'
-          })
+  # NOTE: Publishing is now handled by the dedicated "Release & Publish" workflow
+  # See: .github/workflows/release-publish.yml
+  # This workflow focuses on continuous integration and testing
